Fix header alignment and add hero image

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,30 @@ body {
 	background-color: #E4E0D8;
 }
 
+a {
+    color: inherit;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+	color: #CCA3DC;
+	font-weight: bold;    
+	text-decoration: none;
+}
+
+/*a:visited {
+    color: inherit;
+    font-weight: bold;
+    text-decoration: none;
+}*/
+
+a:active {
+	color: #B7C18F;
+	font-weight: bold;    
+	text-decoration: none;
+}
+
 .fixed-width {
     width: 940px;
     margin: 0 auto;
@@ -19,16 +43,17 @@ h1 {
 	color: #F9F6EE;
 	font-family: "Outfit", sans-serif;
 	text-transform: uppercase;
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: bold;
 	position: center;
 	display: inline-block;
+	padding-top: .75em;
 }
 
 .page-header {
 	background-color: #454545;
-	padding-top: 5em;
-	padding-bottom: 5em;
+	padding-top: 1.75rem;
+	padding-bottom: 2.75em;
 }
 
 .logo {
@@ -40,6 +65,7 @@ h1 {
 .page-header nav {
 	float: right;
 	text-transform: uppercase;
+	padding-top: 2.25em;
 }
 
 .page-header nav li {
@@ -48,4 +74,18 @@ h1 {
 	padding-bottom: 3rem;
 	display: inline-block;
 	color: #F9F6EE;
+}
+
+/*===================================
+Section 1
+===================================*/
+
+h2 {
+	color: #1C1C1C;
+	font-size: 24px;
+	text-align: center;
+	font-weight: bold;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	font-family: Rozha+One&display, serif;
 }
